--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "firebase": "^11.3.1",
     "highlightjs": "^9.16.2",
     "js-cookie": "^3.0.5",
+    "motion": "^12.4.7",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
