--- a/client/package.json
+++ b/client/package.json
@@ -48,5 +48,5 @@
   "devDependencies": {
     "tailwindcss": "^3.4.17"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "https://insite-eta.vercel.app/"
 }
