--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "build": "cd client && npm install && npm run build"
+    "postinstall": "cd client && npm install && npm run build",
+    "start": "node server/index.js"
   },
   "keywords": [],
   "author": "",
