add rewrites configuration to Vercel for routing

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -5,5 +5,9 @@
         "use": "@vercel/static-build",
         "config": { "distDir": "build" }
       }
+    ],
+
+    "rewrites":  [
+      {"source": "/(.*)", "destination": "/"}
     ]
   }
