--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,7 +7,10 @@
       }
     ],
 
-    "rewrites":  [
-      {"source": "/(.*)", "destination": "/"}
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "./index.js"
+      }
     ]
 }
