--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,7 +6,5 @@
         "use": "@vercel/node"
       }
     ],
-    "rewrites": [
-      { "source": "(.*)", "destination": "/index.js" }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }] 
 }
